第二天早上实现启动界面

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/cc_menu"
+        android:icon="@drawable/menu"
         android:title="@string/menu_tap" />
 
     <item
